@@ -1,5 +1,5 @@
 archetype 
-	adl-test-ENTRY.archetype_description.draft
+	adl-test-ENTRY.archetype_description_missing_purpose.draft
 	
 concept 
 	[at0000]	--  test
@@ -17,30 +17,14 @@ description
 	details = <
 		["en"] = <
 			language = <[ISO_639-1::en]>
-			purpose = <"For recording a problem, condition or issue that has ongoing significance to the person's health.">
 			use = <"Used for recording any problem, present or past - so is used for recording past history as well as current problems. Used with changed 'Subject of care' for recording problems of relatives and so for family history.">
 			keywords = <"issue", "condition">
 			misuse = <"Use specialisations for medical diagnoses, 'openEHR-EHR-EVALUATION.problem-diagnosis' and histological diagnoses 'openEHR-EHR-EVALUATION.problem-diagnosis-histological'">
 			copyright = <"copyright (c) 2004 The openEHR Foundation">
-			original_resource_uri = <
-				["ligne guide"] = <"http://guidelines.are.us/wherever/fr">
-				["medline"] = <"http://some%20medline%20ref">
-			>
-			other_details = <
-				["item other 1"] = <"item details 1">
-				["item other 2"] = <"item details 2">
-			>
 		>
 	>
 	lifecycle_state = <"AuthorDraft">
 	archetype_package_uri = <"www.aihw.org.au/data_sets/diabetic_archetypes.html">
-	other_contributors = <
-		["1"] = <"Ian McNicoll, MD">
-	>
-	other_details = <
-		["other 1"] = <"details 1">
-		["other 2"] = <"details 2">
-	>
 	
 definition
 	ENTRY[at0000] matches {*}
