@@ -1,3 +1,11 @@
+2007/02/20
+.added support for empty purpose
+.fixed parsing c_code_phrase with single code
+.fixed parsing other_details, original_resource_uri, other_contributors
+.fixed parsing c_dv_quantity_item only with units
+.fixed parsing generic types
+.fixed c_duration pattern
+
 2007/02/19
 .made ontology primary_language and languages optional
 .use code_phrase for language parsing in translations and descriptions
